<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailDataActivity"
    android:background="@color/backgroundSplashscreen"
    android:padding="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/leaf" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_create"
                    android:text="@string/nomor"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_create" />

                <TextView
                    android:id="@+id/textNomor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/TextView02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_group"
                    android:text="@string/nama"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_group" />

                <TextView
                    android:id="@+id/textNama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/TextView03"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_date_range"
                    android:text="@string/tanggal_lahir"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_date_range" />

                <TextView
                    android:id="@+id/textDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/TextView04"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_person"
                    android:text="@string/jenis_kelamin"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_person" />

                <TextView
                    android:id="@+id/textJenisKelamin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />

                <TextView
                    android:id="@+id/TextView05"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:drawableLeft="@drawable/ic_place"
                    android:text="@string/alamat"
                    android:textSize="16sp"
                    android:drawableStart="@drawable/ic_place" />

                <TextView
                    android:id="@+id/textAlamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/textview"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorAccent" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>